--- a/app/about/about.html
+++ b/app/about/about.html
@@ -14,10 +14,10 @@
         
         <a href={{demo.address}} target="_blank">
             <span class="o-demoText">
-                <h2 style="{font: 200 30px/187px 'Arvo', Helvetica, Arial, sans-serif;}">{{demo.name}}</h2>
+                <h2 style="{{font: 200 30px/187px 'Arvo', Helvetica, Arial, sans-serif;}">{{demo.name}}</h2>
                 <p style="{font-size: 24px}">{{demo.details}}</p>
             </span>
-            <img ng-src={{demo.photo}}/>
+            <img ng-src={{demo.photo}}></img>
             <!--<p class="o-demoText">Sample</p>-->
         </a>
         
