Added some stuff for the Team Page
Its not done yet, it still looks all default-ish

--- a/app/Documentations/documentations.html
+++ b/app/Documentations/documentations.html
@@ -1,7 +1,7 @@
 <!-- This is the template for our Tutorial Page -->
 
 <h2>Documentations!</h2>
-<p class="o-textbox">Oh goodness!  If there's one thing that grinds our gears, it's undocumented code.  Unfortunately, our current documentation, <a href="http://omniserver.no-ip.biz/main/projects/oe-js/OmniEngine/doc/?m=Application&d=BaseApp" target="_blank">(located here)</a>, still leaves something to be desired.  However, we plan on making this one of our top priorities, so as to make using OmniEngine as easy as possible.
+<p class="o-textbox">Oh goodness!  If there's one thing that grinds our gears, it's undocumented code.  Unfortunately, our current documentation, <a href="http://omniserver.no-ip.biz/main/projects/oe-js/OmniEngine/doc/?m=Application&d=BaseApp" target="_blank">(located here)</a>, still leaves something to be desired.  However, we plan on making this one of our top priorities, so as to make using OmniEngine as easy as possible to use.
 </p>
 <br>
 <h2>Coming Soon: Documentation (promise) </h2>
