oops I poast broken codez

--- a/demos/refraction/index.html
+++ b/demos/refraction/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<script src="../OmniEngine.js"></script>
+		<script src="../../OmniEngine/OmniEngine.min.js"></script>
 		<link rel="stylesheet" href="../resources/demoStyle.css" />
 		
 		<script src="main.js"></script>
