Added link to Playground and team titles
Realized that the 'team' page is also buggy as shit in Mozilla and needs
to be fixed.  Really starting to hate Firefox.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <h1 class="o-title">OmniEngine</h1>
         <h3 class="o-tagline">An Omnipotent Game Engine for the Web</h3>
     </div>
+    <a href="http://danglingpointers.me/playground/" target="_blank"><img class="o-sandLink" src="assets/sandbox_button.png"></a>
 </div>
 <div class="siteFrame">
     <div class="block1 spacedSet" ng-app="app">
