--- a/app/team/team.html
+++ b/app/team/team.html
@@ -12,6 +12,7 @@
         
         <span>
             <h2 style="{{font: 200 30px/187px 'Arvo', Helvetica, Arial, sans-serif;}">{{friend.name}}</h2>
+            <p style="{font-size: 24px}"> {{friend.position}}</p>
             <p style="{font-size: 24px}">{{friend.details}}</p>
         </span>
         
