Fixed issues with Team page in Firefox
images still not showing up in IE for some reason

--- a/app/team/team.html
+++ b/app/team/team.html
@@ -7,7 +7,7 @@
 <br>
 
 <br>
-<li class="o-roster" ng-repeat="friend in team.members">
+<li class="o-roster" style="height:40%;" ng-repeat="friend in team.members">
     <div class="o-peeps" style={{friend.photo}}>
         
         <span>
