Arrow and link fix

--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
 </head>
 <body>
 <div class="titleBlock">
-    <image src="assets/omni_logo.png" class="o-logo"></image>
-    <div class="o-title-wrapper">
-        
-        <h1 class="o-title">OmniEngine</h1>
-        <h3 class="o-tagline">An Omnipotent Game Engine for the Web</h3>
-    </div>
+	<img src="assets/omni_logo.png" class="o-logo"></img>
+	<div class="o-title-wrapper">
+		<h1 class="o-title">OmniEngine</h1>
+		<h3 class="o-tagline">An Omnipotent Game Engine for the Web</h3>
+	</div>
+	<a id="titleArrow" class="titleArrow">
+		<span class="glyphicon glyphicon-chevron-down"></span>
+	</a>
 </div>
 <div class="siteFrame">
     <div class="block1 spacedSet" ng-app="app">
