--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </head>
 <body>
 <div class="titleBlock">
+	<div class="titleLogo"></div>
 	<img src="assets/omni_logo.png" class="o-logo"></img>
 	<div class="o-title-wrapper">
 		<h1 class="o-title">OmniEngine</h1>
