--- a/games/tower-defense/index.html
+++ b/games/tower-defense/index.html
@@ -1,4 +1,3 @@
-<?php include("../../common/oejs.php"); ?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,7 +5,7 @@
 	<link rel="stylesheet" href="../../common/style.css" />
 	<link rel="stylesheet" href="style.css" />
 	
-	<?php oejs_script(); ?>
+    <script src="http://danglingpointers.me/OmniEngine/OmniEngine.min.js"></script>
 	<script src="../../common/DOM.js"></script>
 	
 	<script src="libs/DOM.js"></script>
