--- a/games/tower-defense/index.html
+++ b/games/tower-defense/index.html
@@ -55,6 +55,7 @@
 			<div name="frame" class="frame1 absolute takeInput" style="overflow-y: auto; top: 4px; right: 4px; bottom: 4px; width: 300px;">
 				<input type="button" name="toggle" value="Show/Hide" />
 				<div class="gameState" name="gameState"></div>
+				<div class="countdown" name="countdown"></div>
 				<div class="userInfo" name="userInfo"></div>
 				<div name="content">
 					<div class="pane shop" name="shop"></div>
