Many new features and assets

--- a/games/tower-defense/index.html
+++ b/games/tower-defense/index.html
@@ -5,11 +5,12 @@
 	<link rel="stylesheet" href="../../common/style.css" />
 	<link rel="stylesheet" href="style.css" />
 	
-    <script src="http://danglingpointers.me/OmniEngine/OmniEngine.min.js"></script>
+    <script src="../../OmniEngine/OmniEngine.min.js"></script>
 	<script src="../../common/DOM.js"></script>
 	
 	<script src="libs/DOM.js"></script>
 	<script src="libs/Map.js"></script>
+	<script src="game/Graph.js"></script>
 	
 	<script src="game/Application.js"></script>
 	<script src="game/UserData.js"></script>
