--- a/games/tower-defense/index.html
+++ b/games/tower-defense/index.html
@@ -22,6 +22,7 @@
 	<script src="game/Waypoint.js"></script>
 	<script src="game/Tower.js"></script>
 	<script src="game/Actor.js"></script>
+	<script src="game/Nametag.js"></script>
 	
 	<script src="main.js"></script>
 </head>
