Hacky solution for beginning camera
The camera class needs to be reworked I think.  This is a hacky
application specifict work around to make the camera rotation correct on
initial load.

--- a/games/tower-defense/index.html
+++ b/games/tower-defense/index.html
@@ -25,7 +25,7 @@
 	<script src="main.js"></script>
 </head>
 <body>
-	<div class="appFrame" id="appFrame">
+	<div class="appFrame" id="appFrame" oncontextmenu="return false;">
 		<div class="appOverlay nodisplay" id="loadingOverlay">
 			<div class="frame1 loader">
 				Loading...<br />
