Forgot to merge brad's index.html

--- a/games/tower-defense/index.html
+++ b/games/tower-defense/index.html
@@ -36,9 +36,24 @@
 		</div>
         <div class="appOverlay nodisplay" id="menuOverlay">
             <div class="frame1 mainMenu takeInput">
-                <span class="title">Tower Defense Game!</span>
+                <span class="title">Sentry Online! BETA</span>
                 <button type="button" class="mainButton" onclick="clickBegin()">Begin</button><br/><br/>
-                <button type="button" class="mainButton">Controls</button>
+				<button type="button" class="mainButton" onclick="showControls()">Controls</button>
+				<div id="controls_display" style="display: none;">
+					<table align="center" id="controls_table">
+						<tr><th style="text-align:left">Key</th><th style="text-align:center">Action</th></tr>
+						<tr><td>'W'</td><td>- Move Camera Forward</td><tr>
+						<tr><td>'S'</td><td>- Move Camera Backwards</td></tr>
+						<tr><td>'A'</td><td>- Move Camera Left</td></tr>
+						<tr><td>'D'</td><td>- Move Camera Right</td></tr>
+						<tr><td>'B'</td><td>- Buy Selected</td></tr>
+						<tr><td>'L'</td><td>- Sell Selected</td></tr>
+						<tr><td>'U'</td><td>- Upgrade Selected</td></tr>
+						<tr><td>'Left Click'</td><td>- Select Tile</td></tr>
+						<tr><td>'Wheel'</td><td>- Zoom Camera</td></tr>
+						<tr><td>'Right Click'</td><td>- Rotate Camera</td></tr>
+					</table>
+				</div>
             </div>
         </div>
 		<div class="appOverlay nodisplay" id="ingameOverlay">
