--- a/games/tower-defense/index.html
+++ b/games/tower-defense/index.html
@@ -27,7 +27,7 @@
 	<script src="main.js"></script>
 </head>
 <body>
-	<div class="appFrame" id="appFrame">
+	<div class="appFrame" id="appFrame" oncontextmenu="return false;">
 		<div class="appOverlay nodisplay" id="loadingOverlay">
 			<div class="frame1 loader">
 				Loading...<br />
@@ -56,7 +56,7 @@
 				</div>
             </div>
         </div>
-		<div class="appOverlay nodisplay" id="ingameOverlay" oncontextmenu="return false;">
+		<div class="appOverlay nodisplay" id="ingameOverlay">
 			<div name="frame" class="frame1 absolute takeInput" style="overflow-y: auto; top: 4px; right: 4px; bottom: 4px; width: 300px;">
 				<input type="button" name="toggle" value="Show/Hide" />
 				<div class="gameState" name="gameState"></div>
