Added map loaders and an example Forest implementation.
Also put all resource libraries loaded into a Project.json file for easy
adding and removing libraries. Also moved some src files into more
intuitive subfolders in game/

--- a/games/tower-defense/index.html
+++ b/games/tower-defense/index.html
@@ -18,11 +18,15 @@
 	<script src="game/WeatherSystem.js"></script>
 	<script src="game/MapSystem.js"></script>
 	<script src="game/NavMesh.js"></script>
-	<script src="game/Wall.js"></script>
-	<script src="game/Waypoint.js"></script>
-	<script src="game/Tower.js"></script>
 	<script src="game/Actor.js"></script>
 	<script src="game/Nametag.js"></script>
+	
+	<script src="game/MapObjects/Wall.js"></script>
+	<script src="game/MapObjects/Waypoint.js"></script>
+	<script src="game/MapObjects/Tower.js"></script>
+	
+	<script src="game/MapLoaders/Default.js"></script>
+	<script src="game/MapLoaders/Forest.js"></script>
 	
 	<script src="main.js"></script>
 </head>
