Tower defense updates

--- a/games/tower-defense/index.html
+++ b/games/tower-defense/index.html
@@ -63,7 +63,10 @@
 		<div class="appOverlay nodisplay" id="ingameOverlay">
 			<div name="frame" class="frame1 absolute takeInput" style="overflow-y: auto; top: 4px; right: 4px; bottom: 4px; width: 300px;">
 				<input type="button" name="toggle" value="Show/Hide" />
-				<div class="gameState" name="gameState"></div>
+				<div class="gameState">
+					<div name="gameState"></div><br />
+					<input type="button" name="comeAtMe"value="Come at me" style="float: right;"></input>
+				</div>
 				<div class="userInfo" name="userInfo"></div>
 				<div name="content">
 					<div class="pane shop" name="shop"></div>
